--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.0.0",
+    "@preact/signals": "^1.2.1",
     "preact": "^10.16.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
+    "@types/react-slick": "^0.23.11",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
