modify: aliases import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "react-dom": ["./node_modules/preact/compat/"],
       "@/components/*": ["./src/components/*"],
       "@/pages/*": ["./src/pages/*"],
-      "@/stores/*": ["./src/stores/*"]
+      "@/stores/*": ["./src/stores/*"],
+      "@/data/*": ["./src/data/*"],
+      "@/utils/*": ["./src/utils/*"]
     }
   },
   "include": ["src"],
