--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "preact": "^10.16.0",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
