--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
+    "@types/node": "^20.10.0",
     "@types/react-slick": "^0.23.11",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
